crates/formatter/tests/snapshots/snapshots__coder__migrations__000306_template_version_terraform_values.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table template_version_terraform_values (
	template_version_id uuid not null unique references template_versions (id)
		on delete cascade,
	updated_at timestamptz not null default now(),
	cached_plan jsonb not null
);
