crates/formatter/tests/snapshots/snapshots__coder__migrations__000307_fix_notifications_actions_url.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set
	actions = '[
		{
			"label": "View workspace",
			"url": "{{base_url}}/@{{.UserUsername}}/{{.Labels.workspace}}"
		}
	]'::jsonb
where id = '281fdf73-c6d6-4cbb-8ff5-888baf8a2fff';

update notification_templates
set
	actions = '[
		{
			"label": "View workspace",
			"url": "{{base_url}}/@{{.UserUsername}}/{{.Labels.workspace}}"
		},
		{
			"label": "View template version",
			"url": "{{base_url}}/templates/{{.Labels.organization}}/{{.Labels.template}}/versions/{{.Labels.version}}"
		}
	]'::jsonb
where id = 'd089fe7b-d5c5-4c0c-aaf5-689859f7d392';
