crates/formatter/tests/snapshots/snapshots__coder__migrations__000309_add_devcontainer_name.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_devcontainers
	add column name text not null default '';
alter table workspace_agent_devcontainers alter column name drop default;

comment on column workspace_agent_devcontainers.name is 'The name of the Dev Container.';
